# modern-clippy

./: LICENSE  README.md  forge.config.ts  index.html  package.json  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts
api/: index.ts
main/: index.ts
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Chat.tsx  Clippy.tsx  Form.tsx  Hide.tsx  Menu.tsx  Text.tsx  initialTexts.ts  sample.json
src/main/: bing.ts  index.ts  window.ts
src/renderer/: App.tsx  index.html  preload.ts  types.ts
src/renderer/api/: index.ts
src/renderer/components/: Chat.tsx  Form.tsx  Hide.tsx  Menu.tsx  Response.tsx  Text.tsx
